--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,368 @@
-/* Use import to split up your CSS into manageable chunks */
+/* Import partials */
 @import url("./reset.css");
-/* Files that are only needed to be imported are called partials */
-/* These are marked with an underscore: */
 @import url("./variables.css");
-/* Feel free to add as many of these imports as you need */
 
+/* Global Styles */
 body {
-  color: var(--color-primary);
-  background-color: var(--color-secondary);
+  display: flex;
+  flex-direction: column;
+  background-color: var(--color-background);
+  color: var(--color-secondary);
+  font-size: var(--font-size-body);
+  line-height: 1.6;
 }
 
-.centered {
+/* Header Styling */
+header {
+  display: flex;
+  align-items: center;
+  padding: var(--spacing-medium) var(--spacing-large);
+  background-color: var(--color-background);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
+header .logo img {
+  max-height: 50px;
+  width: auto;
+}
+
+nav {
+  display: flex;
+  font-weight: bold;
+  gap: var(--spacing-medium);
+  flex-grow: 1;
+  justify-content: center;
+}
+
+nav a:hover {
+  color: #555;
+}
+
+/* Main Content */
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 120px auto auto auto;
+  width: 100%;
+}
+
+.order-complete {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #D9D9D9;
+  width: 1300px;
+  height: 730px;
+  padding: var(--spacing-medium);
+ }
+
+.confirmation-image img {
+  width: 304px;
+  height: 304px;
+  margin-top: var(--spacing-large);
+}
+
+.order-status {
+  text-align: center;
+  margin-top: var(--spacing-large);
+}
+
+.order-status h1 {
+  font-family: 'Rockwell', sans-serif;
+  font-size: 40px;
+  font-weight: 700;
+  color: var(--color-primary);
+}
+
+.order-status p {
+  font-family: 'Roboto', sans-serif;
+  font-size: var(--font-size-subheading);
+  color: var(--color-primary);
+  margin-top: var(--spacing-small);
+}
+
+/* About Styling */
+.about-main {
+  max-width: 80%;
+  margin: auto;
+  text-align: center;
+}
+
+.about-main h2 {
+  font-size: 70px;
+  font-weight: 400;
+  margin-bottom: var(--spacing-medium);
+}
+
+.about-main p {
+  font-size: var(--font-size-subheading);
+  line-height: 1.8;
+}
+
+/* Footer Styling */
+footer {
+  position: relative;
+  width: 100vw;
+  padding: var(--spacing-large) var(--spacing-medium);
+  background-color: #f1f1f1;
+  text-align: center;
+}
+
+footer nav a {
+  color: #777;
+  font-size: var(--font-size-body);
+  transition: color 0.3s;
+}
+
+footer nav a:hover {
+  color: var(--color-primary);
+}
+
+/* Index Page Styles */
+.collection {
   display: flex;
   justify-content: center;
-  align-items: center;
-  justify-content: center;
+  gap: var(--spacing-large);
+  padding: var(--spacing-large) 0;
+}
+
+.collection .men, .collection .women {
+  position: relative;
+  width: 100%;
+  max-width: 750px;
+}
+
+.collection img {
+  width: 100%;
+  height: 500px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.collection h2 {
+  position: absolute;
+  bottom: var(--spacing-small);
+  left: var(--spacing-small);
+  color: #ffffff;
+  font-size: var(--font-size-subheading);
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: var(--spacing-small);
+  border-radius: 4px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+/* Explore Section */
+.explore {
   text-align: center;
+  margin-top: var(--spacing-large);
+  padding: var(--spacing-large);
+}
+
+.activities {
+  display: flex;
+}
+
+.activity {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: var(--spacing-medium);
+  padding: var(--spacing-medium);
+}
+
+.activity img {
+  width: 80px;
+  height: 80px;
+  margin-bottom: var(--spacing-small);
+}
+
+.activity h4 {
+  font-size: var(--font-size-subheading);
+}
+
+/* Collection Page Styling*/
+.collection-page main {
+  display: flex;
+  justify-content: center;
+  padding: var(--spacing-large);
+}
+
+.collection-page .jackets-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--spacing-large);
+  width: 90%;
+}
+
+.collection-page .jackets {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.jackets img {
+  max-width: 250px;
+  height: 250px;
+  transition: transform 0.3s;
+}
+
+.collection-page .jackets:hover img {
+  transform: scale(1.05);
+}
+
+.collection-page .jackets h4 {
+  margin-top: var(--spacing-small);
+}
+
+.jacket-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.jacket-info img {
+  width: 300px;
+  height: auto;
+  margin-bottom: var(--spacing-medium);
+}
+
+.jacket-info h3 {
+  font-size: var(--font-size-subheading);
+  font-weight: 400;
+  line-height: 1.5;
+  margin: var(--spacing-medium) 0;
+}
+
+.button {
+  display: inline-block;
+  background-color: var(--color-primary);
+  color: var(--color-background);
+  padding: var(--spacing-medium) var(--spacing-large);
+  border-radius: 4px;
+  font-size: var(--font-size-heading);
+  margin-top: var(--spacing-medium);
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #333;
+}
+
+/* Jacket Checkout Page */
+.jacketcheckout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--spacing-medium);
+}
+
+.jacketcheckout img {
+  width: 250px;
+  height: auto;
+}
+
+.product-checkout-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e0e0e0;
+  padding: var(--spacing-small);
+  margin-bottom: var(--spacing-large);
+  border-radius: 8px;
+  width: 300px;
+  font-size: var(--font-size-subheading);
+}
+
+.product-checkout-info h4 {
+  margin: var(--spacing-small) 0;
+}
+
+.quantity-selector {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-small);
+}
+
+.quantity-selector .button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #a8a8a8;
+  color: var(--color-primary);
+  font-size: var(--font-size-heading);
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.quantity-selector .quantity {
+  display: flex;
+  justify-content: center;
+  font-size: var(--font-size-heading);
+  font-weight: bold;
+  width: 40px;
+  height: 40px;
+  margin-top: 1.35rem;
+}
+
+.price, .size {
+  font-size: var(--font-size-heading);
+  font-weight: bold;
+  margin: var(--spacing-small) 0;
+}
+
+.size {
+  margin-bottom: var(--spacing-small);
+}
+
+.form {
+  background-color: #e0e0e0;
+  padding: var(--spacing-medium);
+  border-radius: 8px;
+  width: 100%;
+  max-width: 600px;
+  margin: 0px auto var(--spacing-large);
+  text-align: center;
+}
+
+.two-column-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--spacing-medium);
+}
+
+.form-group input {
+  width: 100%;
+  padding: var(--spacing-small);
+  font-size: var(--font-size-body);
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.checkout-button {
+  grid-column: span 2;
+  padding: var(--spacing-small) var(--spacing-medium);
+  font-size: var(--font-size-subheading);
+  font-weight: bold;
+  color: var(--color-background);
+  background-color: var(--color-primary);
+  border-radius: 4px;
+  margin-top: var(--spacing-medium);
+  transition: background-color 0.3s ease;
+}
+
+.checkout-button:hover {
+  background-color: #333;
+}
+
+.info-box {
+  margin-bottom: var(--spacing-large);
 }
